--- a/StyleGuide.html
+++ b/StyleGuide.html
@@ -146,6 +146,10 @@ function preFormatting() {
                 <fieldset>
                     <legend>Legend</legend>
                     <div class="form-group">
+                        <label for="exampleInputEmail">Username</label>
+                        <input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter username">
+                    </div>
+                    <div class="form-group">
                         <label for="exampleInputEmail">Email address</label>
                         <input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter email">
                     </div>
