--- a/StyleGuide.html
+++ b/StyleGuide.html
@@ -150,6 +150,14 @@ function preFormatting() {
                         <input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter email">
                     </div>
                     <div class="form-group">
+                        <label for="exampleInputEmail">Phone Number</label>
+                        <input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter phone number">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail">Zip Code</label>
+                        <input type="text" class="form-control" id="exampleInputEmail" placeholder="Enter zipcode">
+                    </div>
+                    <div class="form-group">
                         <label for="exampleInputPassword">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword" placeholder="Password">
                     </div>
