fix font and logo

--- a/StyleGuide.html
+++ b/StyleGuide.html
@@ -12,6 +12,9 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!-- Font CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto|Lato" rel="stylesheet">
+
     <!-- Insert here your custom style file(s) -->
     <link rel="stylesheet" type="text/css" href="css/StyleGuide.css">
 
@@ -43,16 +46,27 @@
             <!-- LOGO -->
 
             <!-- HEADINGS -->
-            <h2 class="page-header" id="headings">Headings</h2>
+            <h2 class="page-header" id="headings">Typography</h2>
 
-            <h1 class="page-header">Page Header <small>With Small Text</small></h1>
-            <h1>This is an h1 heading</h1>
-            <h2>This is an h2 heading</h2>
-            <h3>This is an h3 heading</h3>
-            <h4>This is an h4 heading</h4>
-            <h5>This is an h5 heading</h5>
-            <h6>This is an h6 heading</h6>
-            <!-- /HEADINGS -->
+            <div class="col-md-offset-1">
+                <h1 class="page-header">Page Header <small>With Small Text</small></h1>
+                <h1>This is an h1 heading</h1>
+                <h2>This is an h2 heading</h2>
+                <h3>This is an h3 heading</h3>
+                <h4>This is an h4 heading</h4>
+                <h5>This is an h5 heading</h5>
+                <h6>This is an h6 heading</h6>
+            </div>
+            
+            <!-- Color -->
+            <h2 class="page-header" id="headings">Colors</h2>
+            <!-- https://hc.weebly.com/hc/en-us -->
+            <div class="alert ns-blue text-white">Neat street blue (theme)</div>
+            <div class="alert ns-orange">Neat street orange (highlights)</div>
+            <div class="alert black text-white">Black</div>
+            <div class="alert grey text-white">Grey</div>
+            
+
             <!-- /NavBar -->
             <h2 class="page-header">NavBar</h2>
             <nav class="navbar navbar-default" role="navigation">
@@ -63,7 +77,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">NeatStreet</a>
+                        <a class="navbar-brand" href="#">
+                            NeatStreet
+                        </a>
                     </div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
