fix stylesheet rel

--- a/StyleGuide.html
+++ b/StyleGuide.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto|Lato" rel="stylesheet">
 
     <!-- Insert here your custom style file(s) -->
-    <link rel="stylesheet" type="text/css" href="css/StyleGuide.css">
+    <link rel="stylesheet" type="text/css" href="css/styleGuide.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -57,7 +57,7 @@
                 <h5>This is an h5 heading</h5>
                 <h6>This is an h6 heading</h6>
             </div>
-            
+
             <!-- Color -->
             <h2 class="page-header" id="headings">Colors</h2>
             <!-- https://hc.weebly.com/hc/en-us -->
@@ -65,7 +65,7 @@
             <div class="alert ns-orange">Neat street orange (highlights)</div>
             <div class="alert black text-white">Black</div>
             <div class="alert grey text-white">Grey</div>
-            
+
 
             <!-- /NavBar -->
             <h2 class="page-header">NavBar</h2>
