add image thumbail, image garelley, and search bar

--- a/StyleGuide.html
+++ b/StyleGuide.html
@@ -104,9 +104,250 @@
             </nav>
             <!-- /NavBar -->
 
+            <!-- Image thumbnails -->
+            <h2 class="page-header">Image thumbnails</h2>
+            <p>Hover the picture</p>
+            <div class="container">
+                <a class="portfolio-box" href="./img/largeBomberJacket.jpg">
+                    <img src="./img/blackjacket.png" alt="" class="img-thumbnail" width="140" height="195">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Jacket
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Image thumbnails -->
+
+            <!-- Image Gallery -->
+            <h2 class="page-header">Image Gallery One</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <div class="container">
+                            <div class="top-left">
+                                <span class="badge badge-pill badge-orange">Jacket</span>
+                            </div>
+                            <a class="portfolio-box" href="./img/largeBomberJacket.jpg">
+                                <img src="./img/blackjacket.png" alt="">
+                                <div class="caption">
+                                    <p>This is a Black Jacket.</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <div class="container">
+                            <div class="top-left">
+                                <span class="badge badge-pill badge-blue">Jacket</span>
+                            </div>
+                            <a class="portfolio-box" href="./img/largeBomberJacket.jpg">
+                                <img src="./img/blackjacket.png" alt="">
+                                <div class="caption">
+                                    <p>This is a Black Jacket.</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <div class="container">
+                            <div class="top-left">
+                                <span class="badge badge-pill badge-peach">Jacket</span>
+                            </div>
+                            <a class="portfolio-box" href="./img/largeBomberJacket.jpg">
+                                <img src="./img/blackjacket.png" alt="">
+                                <div class="caption">
+                                    <p>This is a Black Jacket.</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Image Gallery Two-->
+            <h2 class="page-header">Image Gallery Two</h2>
+            <div class="row text-center text-lg-left">
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <hr/>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <hr/>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <a href="#" class="d-block mb-4 h-100">
+                        <div  class="img-container">
+                            <img class="img-fluid img-thumbnail" src="./img/shoes.jpg" alt="">
+                            <div class="img-caption">
+                                <p>Shoes.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- Image Gallery Two-->
+
+            <!--Search Bar-->
+            <h2 class="page-header">Search Bar</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="input-group" id="adv-search">
+                            <input type="text" class="form-control" placeholder="Search for items" />
+                            <div class="input-group-btn">
+                                <div class="btn-group" role="group">
+                                    <div class="dropdown dropdown-lg">
+                                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
+                                        <div class="dropdown-menu dropdown-menu-right" role="menu">
+                                            <form class="form-horizontal" role="form">
+                                                <div class="form-group">
+                                                    <label for="filter">Filter by</label>
+                                                    <select class="form-control">
+                                                        <option value="0" selected>All Items</option>
+                                                        <option value="1">Women</option>
+                                                        <option value="2">Men</option>
+                                                        <option value="3">Kids</option>
+                                                        <option value="4">Baby</option>
+                                                    </select>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="contain">Category </label>
+                                                    <input class="form-control" type="text" />
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="contain">Key word</label>
+                                                    <input class="form-control" type="text" />
+                                                </div>
+                                                <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Search Bar-->
+
             <!-- CONTENT -->
             <h2 class="page-header" id="content">Content</h2>
-
             <p class="lead">This is a lead paragraph.</p>
             <p>This is an <b>ordinary paragraph</b> that is <i>long enough</i> to wrap to <u>multiple lines</u> so that you can see how the line spacing looks.</p>
             <p class="text-muted">Muted color paragraph.</p>
@@ -146,13 +387,6 @@
                 </div>
             </div>
             <br>
-            <pre>
-function preFormatting() {
-    // looks like this;
-    var something = somethingElse;
-    return true;
-}
-                        </pre>
             <!-- /CONTENT -->
 
             <!-- CONTENT -->
