--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        
+
         ga('create', 'UA-128391194-1', 'auto');
         ga('send', 'pageview');
     </script>
@@ -68,6 +68,7 @@
         </div>
       </div>
     </nav>
+    <!-- Navigation -->
 
     <header class="masthead text-center text-white d-flex">
       <div class="container my-auto">
