--- a/StyleGuide.html
+++ b/StyleGuide.html
@@ -327,7 +327,13 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="contain">Category </label>
-                                                    <input class="form-control" type="text" />
+                                                    <select class="form-control">
+                                                        <option value="0" selected>All Categories</option>
+                                                        <option value="1">Jacket</option>
+                                                        <option value="2">Shoes</option>
+                                                        <option value="3">Pants</option>
+                                                        <option value="4">Shirts</option>
+                                                    </select>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="contain">Key word</label>
